Move config to application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,3 +4,6 @@ mongo-async-driver {
         loglevel = DEBUG
     }
 }
+
+mongodb.servers = ["mongodb://localhost:27017"]
+mongodb.db = "akka-openid"
